scripts/tests/errors/err_array_map_arithmetic.bu
// Test: array + map arithmetic should error cleanly
// Expected: runtime error about type mismatch

var a = [1, 2, 3];
var b = {"x": 1};
var c = a + b;
